--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,8 @@
                     </div>
                     <ul class="header__links-pages">
                         <li class="header__links-page"><a href="#services">О нас</a></li>
-                        <li class="header__links-page header__links-page--active"><a href="#values">Наши ценности</a></li>
+                        <li class="header__links-page header__links-page--active"><a href="#values">Наши ценности</a>
+                        </li>
                         <li class="header__links-page"><a href="#vacancies">Вакансии</a></li>
                         <li class="header__links-page"><a href="#questionnaire">Начало карьеры</a></li>
                         <li class="header__links-page"><a href="#contacts">Контакты</a></li>
@@ -364,7 +365,7 @@
                     </label>
                     <span class="vacancies__switcher-all vacancies__switcher-choice">Все вакансии</span>
                 </div>
-                <div class="vacancies__items vacancies__items-country">
+                <div class="vacancies__items vacancies__items-country vacancies__items-countrynav">
                     <div class="vacancies__item">
                         <div class="vacancies__item-name">
                             Бухгалтер по расчету
@@ -379,7 +380,7 @@
                             ЗП по результатам собеседоваия
                         </div>
                         <div class="vacancies__item__button more-button">
-                            <a href="#">
+                            <a href="#" data-slide="0">
                                 <span>Подробнее</span>
                             </a>
                         </div>
@@ -398,7 +399,7 @@
                             68.000 — 80.000 руб.
                         </div>
                         <div class="vacancies__item__button more-button">
-                            <a href="#">
+                            <a href="#" data-slide="1">
                                 <span>Подробнее</span>
                             </a>
                         </div>
@@ -503,6 +504,132 @@
                 </div>
                 <div class="vacancies__more-jobs button">
                     <button>Больше вакансий</button>
+                </div>
+            </div>
+        </div>
+        <div class="vacancies__jobs-slider">
+            <div class="jobs-slider__inner">
+                <div class="jobs-slider__item">
+                    <div class="job-popup popup-window">
+                        <div class="close-popup">
+                            <svg class="top-social__item-insta">
+                                <use xlink:href="./images/svg_sprite/sprite.svg#close1"></use>
+                            </svg>
+                        </div>
+                        <div class="job-popup__inner">
+                            <div class="job-popup__short-info">
+                                <div class="short-info__title">Бухгалтер по расчету заработной платы</div>
+                                <div class="short-info__desk">от 30 000 до 60 000 руб. до вычета налогов</div>
+                                <div class="short-info__button button">
+                                    <button>
+                                        Откликнуться
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="job-popup__full-info">
+                                <div class="full-info__duties-title job-popup__title">
+                                    Обязанности
+
+                                </div>
+                                <ul class="full-info__duties-items job-popup__decs">
+                                    <li>Ведение бухгалтерского учета ООО и ИП "под ключ"(от обработки первичной
+                                        документации до сдачи
+                                        всей отчетности)</li>
+                                    <li>Составление отчетности как регламентированной так и управленческой.</li>
+                                    <li>Постановку учета с нуля,восстановление учета.</li>
+                                    <li>Консультирование в выборе формы налогообложения,оптимизация налогообложения.
+                                    </li>
+                                    <li>Подготовку и сдачу отчетности в ИФНС и фонды.</li>
+                                    <li>Ввод первичной документации в 1с:реализация,поступление,банк,касса.</li>
+                                    <li>Работу с клиент-банк(проведение платежей)</li>
+                                </ul>
+                                <div class="full-info__requirements-title job-popup__title">
+                                    Требования
+                                </div>
+                                <ul class="full-info__requirements-items job-popup__decs">
+                                    <li>Опыт работы бухгалтером</li>
+                                    <li>Уверенный пользователь ПК</li>
+                                    <li>Личные качества(аккуратность,внимательность,нацеленность на результа</li>
+                                </ul>
+                                <div class="full-info__conditions-title job-popup__title">
+                                    Условия
+                                </div>
+                                <ul class="full-info__conditions-items job-popup__decs">
+                                    <li class="conditions-items__item-price"><span>З/плата от 30 000</span></li>
+                                    <li>от 30 000 до 60 000 руб. до вычета налогов</li>
+                                </ul>
+
+                                <div class="full-info__date">
+                                    Вакансия добавлена 16 февраля 2020
+                                </div>
+
+                                <div class="full-info__button button">
+                                    <button>Откликнуться</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="jobs-slider__item">
+                    <div class="job-popup popup-window">
+                        <div class="close-popup">
+                            <svg class="top-social__item-insta">
+                                <use xlink:href="./images/svg_sprite/sprite.svg#close1"></use>
+                            </svg>
+                        </div>
+                        <div class="job-popup__inner">
+                            <div class="job-popup__short-info">
+                                <div class="short-info__title">Бухгалтер по расчету заработной платы</div>
+                                <div class="short-info__desk">от 30 000 до 60 000 руб. до вычета налогов</div>
+                                <div class="short-info__button button">
+                                    <button>
+                                        Откликнуться
+                                    </button>
+                                </div>
+                            </div>
+                            <div class="job-popup__full-info">
+                                <div class="full-info__duties-title job-popup__title">
+                                    Обязанности
+
+                                </div>
+                                <ul class="full-info__duties-items job-popup__decs">
+                                    <li>Ведение бухгалтерского учета ООО и ИП "под ключ"(от обработки первичной
+                                        документации до сдачи
+                                        всей отчетности)</li>
+                                    <li>Составление отчетности как регламентированной так и управленческой.</li>
+                                    <li>Постановку учета с нуля,восстановление учета.</li>
+                                    <li>Консультирование в выборе формы налогообложения,оптимизация налогообложения.
+                                    </li>
+                                    <li>Подготовку и сдачу отчетности в ИФНС и фонды.</li>
+                                    <li>Ввод первичной документации в 1с:реализация,поступление,банк,касса.</li>
+                                    <li>Работу с клиент-банк(проведение платежей)</li>
+                                </ul>
+                                <div class="full-info__requirements-title job-popup__title">
+                                    Требования
+                                </div>
+                                <ul class="full-info__requirements-items job-popup__decs">
+                                    <li>Опыт работы бухгалтером</li>
+                                    <li>Уверенный пользователь ПК</li>
+                                    <li>Личные качества(аккуратность,внимательность,нацеленность на результа</li>
+                                </ul>
+                                <div class="full-info__conditions-title job-popup__title">
+                                    Условия
+                                </div>
+                                <ul class="full-info__conditions-items job-popup__decs">
+                                    <li class="conditions-items__item-price"><span>З/плата от 30 000</span></li>
+                                    <li>от 30 000 до 60 000 руб. до вычета налогов</li>
+                                </ul>
+
+                                <div class="full-info__date">
+                                    Вакансия добавлена 16 февраля 2020
+                                </div>
+
+                                <div class="full-info__button button">
+                                    <button>Откликнуться</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -664,12 +791,119 @@
             </div>
 
             <div class="footer__bottom-logo">
-                <svg >
+                <svg>
                     <use xlink:href="./images/svg_sprite/sprite.svg#logo"></use>
                 </svg>
             </div>
         </div>
     </footer>
+
+    <div class="form-feedback popup-window">
+        <div class="form-feedback__close close-popup">
+            <svg class="top-social__item-insta">
+                <use xlink:href="./images/svg_sprite/sprite.svg#close1"></use>
+            </svg>
+        </div>
+        <div class="form-feedback__inner">
+            <div class="form-feedback__title">Отклик на вакансию</div>
+            <form class="form-feedback__form">
+                <div class="form-feedback__input form-feedback__input-job">
+                    <input type="text" required placeholder="" name="job" onfocus="addBorderDiv(this)"
+                        onblur="removeBorderDiv(this)">
+                    <label>Желаемая вакансия *</label>
+                    <div class="form-feedback__input-close">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#close"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="form-feedback__input form-feedback__input-name">
+                    <input type="text" required placeholder="" name="name" onfocus="addBorderDiv(this)"
+                        onblur="removeBorderDiv(this)">
+                    <label>Фамилия, имя и отчество *</label>
+                    <div class="form-feedback__input-close">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#close"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="form-feedback__input form-feedback__input-phone">
+                    <input type="tel" required placeholder="" name="phone" onfocus="addBorderDiv(this)"
+                        onblur="removeBorderDiv(this)">
+                    <label>Мобильный телефон*</label>
+                    <div class="form-feedback__input-close">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#close"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="form-feedback__input form-feedback__input-email">
+                    <input type="email" placeholder="" name="email" onfocus="addBorderDiv(this)"
+                        onblur="removeBorderDiv(this)">
+                    <label>E-mail</label>
+                    <div class="form-feedback__input-close">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#close"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="form-feedback__input form-feedback__input-education">
+                    <input type="text" required placeholder="" name="education" onfocus="addBorderDiv(this)"
+                        onblur="removeBorderDiv(this)">
+                    <label>Образование *</label>
+                    <div class="form-feedback__input-close">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#close"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="form-feedback__input form-feedback__input-address">
+                    <input type="text" required placeholder="" name="address" onfocus="addBorderDiv(this)"
+                        onblur="removeBorderDiv(this)">
+                    <label>Адрес места жительства *</label>
+                    <div class="form-feedback__input-close">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#close"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="form-feedback__input form-feedback__input-date">
+                    <input type="date" placeholder="" onfocus="addBorderDiv(this)" onblur="removeBorderDiv(this)">
+                    <label>Дата рождения</label>
+                    <div class="form-feedback__input-close">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#close"></use>
+                        </svg>
+                    </div>
+                </div>
+                <div class="form-feedback__input-file">
+                    <input type="file" data-browse="Загрузить резюме" data-placeholder="" onfocus="addBorderDiv(this)"
+                        onblur="removeBorderDiv(this)">
+                    <div class="input-file__trash">
+                        <svg>
+                            <use xlink:href="./images/svg_sprite/sprite.svg#trash"></use>
+                        </svg>
+                    </div>
+                    <label></label>
+                </div>
+                <div class="form-feedback__input form-feedback__input-comment">
+                    <textarea placeholder="" onfocus="addBorderDiv(this)" onblur="removeBorderDiv(this)"></textarea>
+                    <label>Комментарий</label>
+                </div>
+
+                <div class="form-feedback__form-button">
+                    <div class="form-button__checkbox" onclick="enabledButton();">
+                        <input type="checkbox" class="form-feedback__input-agreement"><span>Я принимаю условия <a
+                                href="#">передачи информации</a></span>
+                    </div>
+
+                    <button class="form-button__button--disabled" type="submit">
+                        Отправить
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <script src="./js/libs.min.js"></script>
     <script src="./js/main.js"></script>
