replace group svg to web

--- a/app/index.html
+++ b/app/index.html
@@ -738,9 +738,10 @@
                     </div>
                     <div class="student-questionnaire__item">
                         <div class="questionnaire-item__image">
-                            <svg style="width: 34px;">
+                            <!-- <svg style="width: 34px;">
                                 <use xlink:href="./images/svg_sprite/sprite.svg#group2"></use>
-                            </svg>
+                            </svg> -->
+                            <img src="./images/webp_image/Vector.webp" width="34" alt="">
                         </div>
                         <div class="questionnaire-item__decs">Управление персоналом</div>
                     </div>
