lazy and preload

--- a/app/index.html
+++ b/app/index.html
@@ -83,7 +83,7 @@
                     </div>
                 </div>
                 <div class="welcome_image">
-                    <img src="./images/webp_image/welcome_woomens.webp" alt="woomens">
+                    <img src="./images/webp_image/welcome_woomens.webp" alt="woomens" loading="lazy">
                 </div>
             </div>
         </div>
@@ -208,7 +208,7 @@
                             </div>
                         </div>
                         <div class="slider-item__photo">
-                            <img src="./images/webp_image/position_photo.webp" alt="employee_photo" width="460">
+                            <img src="./images/webp_image/position_photo.webp" alt="employee_photo" width="460" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -230,7 +230,7 @@
                             </div>
                         </div>
                         <div class="slider-item__photo">
-                            <img src="./images/webp_image/position_photo.webp" alt="employee_photo" width="460">
+                            <img src="./images/webp_image/position_photo.webp" alt="employee_photo" width="460" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
 
     <section class="video-fluid">
 
-        <video controls height="556" class="video-fluid__video">
+        <video controls height="556" class="video-fluid__video" preload="none">
             <source src="./images/about.mp4" type="video/mp4">
             <source src="./images/about.webm" type="video/webm">
             <object data="./images/about.swf" type="application/x-shockwave-flash">
@@ -741,7 +741,7 @@
                             <!-- <svg style="width: 34px;">
                                 <use xlink:href="./images/svg_sprite/sprite.svg#group2"></use>
                             </svg> -->
-                            <img src="./images/webp_image/Vector.webp" width="34" alt="">
+                            <img src="./images/webp_image/Vector.webp" width="34" alt="" loading="lazy">
                         </div>
                         <div class="questionnaire-item__decs">Управление персоналом</div>
                     </div>
@@ -785,7 +785,7 @@
                             </div>
 
                             <div class="slider-item__image">
-                                <img src="./images/timeless_image/tanya.png" alt="" width="271">
+                                <img src="./images/timeless_image/tanya.png" alt="" width="271" loading="lazy">
                             </div>
                         </div>
                     </div>
@@ -805,7 +805,7 @@
                             </div>
 
                             <div class="slider-item__image">
-                                <img src="./images/timeless_image/tanya.png" alt="" width="271">
+                                <img src="./images/timeless_image/tanya.png" alt="" width="271" loading="lazy">
                             </div>
                         </div>
                     </div>
